preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-preview
  labels:
    app: rollouts-demo
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rollouts-demo
  type: LoadBalancer
