simple-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-mysql
  labels:
    app: simple-mysql
spec:
  ports:
  - name: mysql
    port: 3306
#    targetPort: 3306
  selector:
    app: simple-mysql
  type: ClusterIP
 # type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: simple-mysql
  labels:
    app: simple-mysql
spec:
  replicas: 1  
  template:
    metadata:
      labels:
        app: simple-mysql
    spec:
      containers:
      - env:
        - name: MYSQL_ROOT_PASSWORD
          value: root
        - name: MYSQL_DATABASE
          value: blackstar
        - name: MYSQL_USER
          value: blackstar
        - name: MYSQL_PASSWORD
          value: "my1234"          
        
        image: mysql:5.6
        imagePullPolicy: IfNotPresent 
        name: simple-mysql-container
        ports:
        - containerPort: 3306
      restartPolicy: Always
