simple-svc-active.yaml
######### 
# Service
#########


apiVersion: v1
kind: Service
metadata:
  name: simple-active
  labels:
    app: simple
spec:
  selector:
    app: simple
  
  ports:
  - protocol: TCP
    port: 8088
    targetPort: 8089
#    nodePort: 30001
  type: LoadBalancer
