simple-svc-preview.yaml
######### 
# Service
#########


apiVersion: v1
kind: Service
metadata:
  name: simple-preview
  labels:
    app: simple
spec:
  selector:
    app: simple
  
  ports:
  - protocol: TCP
    port: 8088
    targetPort: 8087
#    nodePort: 30001
  type: LoadBalancer
